Changing page title, fixing padding on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -41,7 +41,7 @@ footer > .container > p{
 }
 
 .header-container-titulo{
-    margin-left: 1rem;
+    margin-left: 2rem;
     display: flex;
     flex: 1 1 auto;
     flex-direction: column
